# lfs-8.3-systemd

./: .gitignore  README.md
etc/: fstab  group-  hostname  hosts  ld.so.cache  lfs-release  login.defs  lsb-release  machine-id  man_db.conf  os-release  shadow  shadow-
lib/: libblkid.so.1.1.0  libbz2.so.1.0.6  libcap.so.2.25  libcom_err.so.2.1  libe2p.so.2.3  libext2fs.so.2.4  libfdisk.so.1.1.0  libhistory.so.7.0  liblzma.so.5.2.4  libmount.so.1.1.0  libncursesw.so.6.1  libnss_myhostname.so.2  libnss_mymachines.so.2  libnss_resolve.so.2  (+8 more)
sources/automake-1.16.1/t/instfail-libtool.dir/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  liblt1.c  liblt1.la  liblt1.lo  liblt2.c  liblt2.la  liblt2.lo  liblt3.c  liblt3.la  liblt3.lo  libltn1.c  libltn1.la  libltn1.lo  libltn2.c  libltn2.la  libltn2.lo  libltn3.c  libltn3.la  libltn3.lo  libtool  prog1  prog2  prog3  progn1  progn2  progn3
sources/automake-1.16.1/t/instfail-libtool.dir/.deps/: liblt1.Plo  liblt2.Plo  liblt3.Plo  libltn1.Plo  libltn2.Plo  libltn3.Plo  prog1.Po  progn2.Po  progn3.Po
sources/automake-1.16.1/t/instfail-libtool.dir/.libs/: liblt1.la  liblt1.lai  liblt1.so.0.0.0  liblt2.la  liblt2.lai  liblt2.so.0.0.0  liblt3.la  liblt3.lai  liblt3.so.0.0.0  libltn1.la  libltn1.lai  libltn1.so.0  libltn1.so.0.0.0  libltn2.la  libltn2.lai  libltn2.so.0  libltn2.so.0.0.0  libltn3.la  libltn3.lai  libltn3.so.0  libltn3.so.0.0.0
sources/automake-1.16.1/t/instfail-libtool.dir/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sources/automake-1.16.1/t/instfail.dir/: Makefile  Makefile.am  Makefile.in  aclocal.m4  ar-lib  config.status  configure  configure.ac  lib1.c  lib2.c  lib3.c  libn1.c  libn2.c  libn3.c  prog1  prog2  prog3  progn1  progn2  progn3
sources/automake-1.16.1/t/instfail.dir/.deps/: lib1.Po  lib2.Po  lib3.Po  libn1.Po  libn2.Po  libn3.Po  prog2.Po  prog3.Po  progn1.Po
sources/automake-1.16.1/t/instfail.dir/autom4te.cache/: output.1  requests  traces.0  traces.1
sources/automake-1.16.1/t/instmany-mans.dir/long_subdir_name_with_many_characters/: Makefile.am  Makefile.in
sources/automake-1.16.1/t/instmany.dir/long_subdir_name_with_many_characters/: Makefile.am  Makefile.in
sources/automake-1.16.1/t/instspc.dir/: Makefile.am  Makefile.in  configure  configure.ac
sources/automake-1.16.1/t/instspc.dir/autom4te.cache/: output.1  requests  traces.0  traces.1
sources/automake-1.16.1/t/instspc.dir/build-a_lf_b/: Makefile  config.status
sources/automake-1.16.1/t/instspc.dir/build-bquote/: Makefile  config.status
sources/automake-1.16.1/t/instspc.dir/build-bquote/sub/: base
sources/automake-1.16.1/t/instspc.dir/build-dollar/: Makefile  config.status
sources/automake-1.16.1/t/instspc.dir/build-dollar/.deps/: source.Po
sources/automake-1.16.1/t/instspc.dir/build-dollar/sub/: base
sources/automake-1.16.1/t/instspc.dir/build-dquote/: Makefile  config.status
sources/automake-1.16.1/t/instspc.dir/build-dquote/sub/: nobase
sources/automake-1.16.1/t/instspc.dir/build-linefeed/: Makefile  config.status
sources/automake-1.16.1/t/instspc.dir/build-sharp/: Makefile  config.status
sources/automake-1.16.1/t/instspc.dir/build-squote/: Makefile  config.status
sources/automake-1.16.1/t/instspc.dir/dest-sharp/#/foo/sub/: nobase
sources/automake-1.16.1/t/instspc.dir/dest-squote/'/'-prefix/foo/: base
sources/automake-1.16.1/t/objc-megademo.dir/: Makefile.am  Makefile.in  configure  configure.ac  foo.c  foo.h  fooo.m  foooxx.mm  fooxx.cxx  play.c  play.h  playo.m  playoxx.mm  playxx.cxx
sources/automake-1.16.1/t/objc-megademo.dir/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
sources/automake-1.16.1/t/objc-megademo.dir/build-aux/: compile  depcomp
sources/automake-1.16.1/t/objext-pr10128.dir/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
sources/automake-1.16.1/t/objext-pr10128.dir/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sources/libtool-2.4.6/tests/testsuite.dir/029/: Makefile.am  demo.mk  run
sources/libtool-2.4.6/tests/testsuite.dir/038/: configure.ac  foo.c  foo.cpp  run
sources/libtool-2.4.6/tests/testsuite.dir/038/build-aux/: ltmain.sh
sources/libtool-2.4.6/tests/testsuite.dir/053/: configure.ac  main.c  run
sources/libtool-2.4.6/tests/testsuite.dir/053/l1/: l1.c
sources/libtool-2.4.6/tests/testsuite.dir/053/l3/: l3.h
sources/libtool-2.4.6/tests/testsuite.dir/121/: Makefile.am  foo.h  mlib.c  run
sources/libtool-2.4.6/tests/testsuite.dir/121/libltdl/: README  ltdl.h
sources/libtool-2.4.6/tests/testsuite.dir/121/libltdl/libltdl/: lt__glibc.h  lt_dlloader.h
sources/libtool-2.4.6/tests/testsuite.dir/122/: configure.ac  expout  foo2.c  mdemo.mk  mdemo2.c  run
sources/libtool-2.4.6/tests/testsuite.dir/122/libltdl/: lt__alloc.c  lt__dirent.c
sources/libtool-2.4.6/tests/testsuite.dir/122/libltdl/libltdl/: lt__strl.h
sources/libtool-2.4.6/tests/testsuite.dir/122/libltdl/loaders/: loadlibrary.c  preopen.c
sources/libtool-2.4.6/tests/testsuite.dir/131/: Makefile.am  configure.ac  run
sources/libtool-2.4.6/tests/testsuite.dir/131/ltdl/: lt_error.c
sources/libtool-2.4.6/tests/testsuite.dir/131/ltdl/loaders/: dyld.c
sources/libtool-2.4.6/tests/testsuite.dir/135/: configure.ac  run  stderr
sources/libtool-2.4.6/tests/testsuite.dir/135/ltdl/: Makefile.in
sources/libtool-2.4.6/tests/testsuite.dir/137/: configure.ac  conv.h  expout  run
sources/libtool-2.4.6/tests/testsuite.dir/137/m4/: ltoptions.m4
sources/libtool-2.4.6/tests/testsuite.dir/139/: Makefile.am  foo.h  main.cpp  run
sources/libtool-2.4.6/tests/testsuite.dir/146/: Makefile.in  configure.ac  hello.c  main.c  run
sources/libtool-2.4.6/tests/testsuite.dir/147/: configure.ac  run
sources/libtool-2.4.6/tests/testsuite.dir/151/: Makefile.am  configure.ac  run
sources/libtool-2.4.6/tests/testsuite.dir/151/libltdl/: COPYING.LIB
sources/libtool-2.4.6/tests/testsuite.dir/151/libltdl/config/: install-sh
sources/libtool-2.4.6/tests/testsuite.dir/151/libltdl/libltdl/: lt_error.h
(+32845 files in other folders)
