man_MANS =
man3_MANS =
notrans_man_MANS =
notrans_man3_MANS =
man_MANS += page1.1
man3_MANS += page1.man
notrans_man_MANS += npage1.1
notrans_man3_MANS += npage1.man
man_MANS += page2.1
man3_MANS += page2.man
notrans_man_MANS += npage2.1
notrans_man3_MANS += npage2.man
man_MANS += page3.1
man3_MANS += page3.man
notrans_man_MANS += npage3.1
notrans_man3_MANS += npage3.man
man_MANS += page4.1
man3_MANS += page4.man
notrans_man_MANS += npage4.1
notrans_man3_MANS += npage4.man
man_MANS += page5.1
man3_MANS += page5.man
notrans_man_MANS += npage5.1
notrans_man3_MANS += npage5.man
man_MANS += page6.1
man3_MANS += page6.man
notrans_man_MANS += npage6.1
notrans_man3_MANS += npage6.man
man_MANS += page7.1
man3_MANS += page7.man
notrans_man_MANS += npage7.1
notrans_man3_MANS += npage7.man
man_MANS += page8.1
man3_MANS += page8.man
notrans_man_MANS += npage8.1
notrans_man3_MANS += npage8.man
man_MANS += page9.1
man3_MANS += page9.man
notrans_man_MANS += npage9.1
notrans_man3_MANS += npage9.man
man_MANS += page10.1
man3_MANS += page10.man
notrans_man_MANS += npage10.1
notrans_man3_MANS += npage10.man
man_MANS += page11.1
man3_MANS += page11.man
notrans_man_MANS += npage11.1
notrans_man3_MANS += npage11.man
man_MANS += page12.1
man3_MANS += page12.man
notrans_man_MANS += npage12.1
notrans_man3_MANS += npage12.man
man_MANS += page13.1
man3_MANS += page13.man
notrans_man_MANS += npage13.1
notrans_man3_MANS += npage13.man
man_MANS += page14.1
man3_MANS += page14.man
notrans_man_MANS += npage14.1
notrans_man3_MANS += npage14.man
man_MANS += page15.1
man3_MANS += page15.man
notrans_man_MANS += npage15.1
notrans_man3_MANS += npage15.man
man_MANS += page16.1
man3_MANS += page16.man
notrans_man_MANS += npage16.1
notrans_man3_MANS += npage16.man
man_MANS += page17.1
man3_MANS += page17.man
notrans_man_MANS += npage17.1
notrans_man3_MANS += npage17.man
man_MANS += page18.1
man3_MANS += page18.man
notrans_man_MANS += npage18.1
notrans_man3_MANS += npage18.man
man_MANS += page19.1
man3_MANS += page19.man
notrans_man_MANS += npage19.1
notrans_man3_MANS += npage19.man
man_MANS += page20.1
man3_MANS += page20.man
notrans_man_MANS += npage20.1
notrans_man3_MANS += npage20.man
man_MANS += page21.1
man3_MANS += page21.man
notrans_man_MANS += npage21.1
notrans_man3_MANS += npage21.man
man_MANS += page22.1
man3_MANS += page22.man
notrans_man_MANS += npage22.1
notrans_man3_MANS += npage22.man
man_MANS += page23.1
man3_MANS += page23.man
notrans_man_MANS += npage23.1
notrans_man3_MANS += npage23.man
man_MANS += page24.1
man3_MANS += page24.man
notrans_man_MANS += npage24.1
notrans_man3_MANS += npage24.man
man_MANS += page25.1
man3_MANS += page25.man
notrans_man_MANS += npage25.1
notrans_man3_MANS += npage25.man
man_MANS += page26.1
man3_MANS += page26.man
notrans_man_MANS += npage26.1
notrans_man3_MANS += npage26.man
man_MANS += page27.1
man3_MANS += page27.man
notrans_man_MANS += npage27.1
notrans_man3_MANS += npage27.man
man_MANS += page28.1
man3_MANS += page28.man
notrans_man_MANS += npage28.1
notrans_man3_MANS += npage28.man
man_MANS += page29.1
man3_MANS += page29.man
notrans_man_MANS += npage29.1
notrans_man3_MANS += npage29.man
man_MANS += page30.1
man3_MANS += page30.man
notrans_man_MANS += npage30.1
notrans_man3_MANS += npage30.man
man_MANS += page31.1
man3_MANS += page31.man
notrans_man_MANS += npage31.1
notrans_man3_MANS += npage31.man
man_MANS += page32.1
man3_MANS += page32.man
notrans_man_MANS += npage32.1
notrans_man3_MANS += npage32.man
man_MANS += page33.1
man3_MANS += page33.man
notrans_man_MANS += npage33.1
notrans_man3_MANS += npage33.man
man_MANS += page34.1
man3_MANS += page34.man
notrans_man_MANS += npage34.1
notrans_man3_MANS += npage34.man
man_MANS += page35.1
man3_MANS += page35.man
notrans_man_MANS += npage35.1
notrans_man3_MANS += npage35.man
man_MANS += page36.1
man3_MANS += page36.man
notrans_man_MANS += npage36.1
notrans_man3_MANS += npage36.man
man_MANS += page37.1
man3_MANS += page37.man
notrans_man_MANS += npage37.1
notrans_man3_MANS += npage37.man
man_MANS += page38.1
man3_MANS += page38.man
notrans_man_MANS += npage38.1
notrans_man3_MANS += npage38.man
man_MANS += page39.1
man3_MANS += page39.man
notrans_man_MANS += npage39.1
notrans_man3_MANS += npage39.man
man_MANS += page40.1
man3_MANS += page40.man
notrans_man_MANS += npage40.1
notrans_man3_MANS += npage40.man
man_MANS += page41.1
man3_MANS += page41.man
notrans_man_MANS += npage41.1
notrans_man3_MANS += npage41.man
man_MANS += page42.1
man3_MANS += page42.man
notrans_man_MANS += npage42.1
notrans_man3_MANS += npage42.man
man_MANS += page43.1
man3_MANS += page43.man
notrans_man_MANS += npage43.1
notrans_man3_MANS += npage43.man
man_MANS += page44.1
man3_MANS += page44.man
notrans_man_MANS += npage44.1
notrans_man3_MANS += npage44.man
man_MANS += page45.1
man3_MANS += page45.man
notrans_man_MANS += npage45.1
notrans_man3_MANS += npage45.man
man_MANS += page46.1
man3_MANS += page46.man
notrans_man_MANS += npage46.1
notrans_man3_MANS += npage46.man
man_MANS += page47.1
man3_MANS += page47.man
notrans_man_MANS += npage47.1
notrans_man3_MANS += npage47.man
man_MANS += page48.1
man3_MANS += page48.man
notrans_man_MANS += npage48.1
notrans_man3_MANS += npage48.man
man_MANS += page49.1
man3_MANS += page49.man
notrans_man_MANS += npage49.1
notrans_man3_MANS += npage49.man
man_MANS += page50.1
man3_MANS += page50.man
notrans_man_MANS += npage50.1
notrans_man3_MANS += npage50.man
man_MANS += page51.1
man3_MANS += page51.man
notrans_man_MANS += npage51.1
notrans_man3_MANS += npage51.man
man_MANS += page52.1
man3_MANS += page52.man
notrans_man_MANS += npage52.1
notrans_man3_MANS += npage52.man
man_MANS += page53.1
man3_MANS += page53.man
notrans_man_MANS += npage53.1
notrans_man3_MANS += npage53.man
man_MANS += page54.1
man3_MANS += page54.man
notrans_man_MANS += npage54.1
notrans_man3_MANS += npage54.man
man_MANS += page55.1
man3_MANS += page55.man
notrans_man_MANS += npage55.1
notrans_man3_MANS += npage55.man
man_MANS += page56.1
man3_MANS += page56.man
notrans_man_MANS += npage56.1
notrans_man3_MANS += npage56.man
man_MANS += page57.1
man3_MANS += page57.man
notrans_man_MANS += npage57.1
notrans_man3_MANS += npage57.man
man_MANS += page58.1
man3_MANS += page58.man
notrans_man_MANS += npage58.1
notrans_man3_MANS += npage58.man
man_MANS += page59.1
man3_MANS += page59.man
notrans_man_MANS += npage59.1
notrans_man3_MANS += npage59.man
man_MANS += page60.1
man3_MANS += page60.man
notrans_man_MANS += npage60.1
notrans_man3_MANS += npage60.man
man_MANS += page61.1
man3_MANS += page61.man
notrans_man_MANS += npage61.1
notrans_man3_MANS += npage61.man
man_MANS += page62.1
man3_MANS += page62.man
notrans_man_MANS += npage62.1
notrans_man3_MANS += npage62.man
man_MANS += page63.1
man3_MANS += page63.man
notrans_man_MANS += npage63.1
notrans_man3_MANS += npage63.man
man_MANS += page64.1
man3_MANS += page64.man
notrans_man_MANS += npage64.1
notrans_man3_MANS += npage64.man
man_MANS += page65.1
man3_MANS += page65.man
notrans_man_MANS += npage65.1
notrans_man3_MANS += npage65.man
man_MANS += page66.1
man3_MANS += page66.man
notrans_man_MANS += npage66.1
notrans_man3_MANS += npage66.man
man_MANS += page67.1
man3_MANS += page67.man
notrans_man_MANS += npage67.1
notrans_man3_MANS += npage67.man
man_MANS += page68.1
man3_MANS += page68.man
notrans_man_MANS += npage68.1
notrans_man3_MANS += npage68.man
man_MANS += page69.1
man3_MANS += page69.man
notrans_man_MANS += npage69.1
notrans_man3_MANS += npage69.man
man_MANS += page70.1
man3_MANS += page70.man
notrans_man_MANS += npage70.1
notrans_man3_MANS += npage70.man
man_MANS += page71.1
man3_MANS += page71.man
notrans_man_MANS += npage71.1
notrans_man3_MANS += npage71.man
man_MANS += page72.1
man3_MANS += page72.man
notrans_man_MANS += npage72.1
notrans_man3_MANS += npage72.man
man_MANS += page73.1
man3_MANS += page73.man
notrans_man_MANS += npage73.1
notrans_man3_MANS += npage73.man
man_MANS += page74.1
man3_MANS += page74.man
notrans_man_MANS += npage74.1
notrans_man3_MANS += npage74.man
man_MANS += page75.1
man3_MANS += page75.man
notrans_man_MANS += npage75.1
notrans_man3_MANS += npage75.man
man_MANS += page76.1
man3_MANS += page76.man
notrans_man_MANS += npage76.1
notrans_man3_MANS += npage76.man
man_MANS += page77.1
man3_MANS += page77.man
notrans_man_MANS += npage77.1
notrans_man3_MANS += npage77.man
man_MANS += page78.1
man3_MANS += page78.man
notrans_man_MANS += npage78.1
notrans_man3_MANS += npage78.man
man_MANS += page79.1
man3_MANS += page79.man
notrans_man_MANS += npage79.1
notrans_man3_MANS += npage79.man
man_MANS += page80.1
man3_MANS += page80.man
notrans_man_MANS += npage80.1
notrans_man3_MANS += npage80.man
man_MANS += page81.1
man3_MANS += page81.man
notrans_man_MANS += npage81.1
notrans_man3_MANS += npage81.man
